vault/kustomize/base/vault-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: vault
